fixed white space at footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,3 +258,6 @@ footer.page-footer {
     margin: 0 auto !important;
     left: 5%;
 }
+.row {
+    margin-bottom: 0px !important;
+}
